--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "angular-bootstrap-datetimepicker": "^4.0.2",
     "bootstrap": "^4.5.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.27.0",
     "ngx-bootstrap": "^5.6.1",
+    "open-iconic": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
